--- a/main.html
+++ b/main.html
@@ -8,6 +8,34 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Accessible Portfolio</title>
+</head>
+<body>
+
+    <!-- Heading -->
+    <h1 role="heading">Dhruw Vaviya - Web Developer</h1>
+
+    <!-- Navigation -->
+    <nav role="navigation">
+        <ul role="list">
+            <li role="listitem"><a href="#about">About</a></li>
+            <li role="listitem"><a href="#projects">Projects</a></li>
+            <li role="listitem"><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- Image -->
+    <img src="https://t3.ftcdn.net/jpg/02/99/04/20/360_F_299042079_vGBD7wIlSeNl7vOevWHiL93G4koMM967.jpg" alt="Random Profile Picture" role="img">
+
+</body>
+</html>
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
